# learnOpenGL

./: .clang-format  CMakeLists.txt  main.cpp
cmake/: clangTidy.cmake  clangformat.cmake  compiler.cmake
common/: CMakeLists.txt  application.cpp  application.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  window.cpp  window.hpp
